--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "fwm"
 version = "0.1.0"
 authors = ["Brennan Vincent <brennan@umanwizard.com>"]
 edition = "2018"
+license = "Apache-2.0"
+description = "Window management logic"
+repository = "https://github.com/umanwizard/fwm"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
