--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,6 @@ serde_json = "1"
 gtk = { version = "0.9.2", features = ["v3_16"] }
 gio = { version = "0.9.1", features = ["v2_44"] }
 gdk = { version = "0.13.2", features = ["v3_16"] }
+rust-guile = "0.1"
 rand = "0.8"
+x11 = { version = "2", features = ["xlib"] }
