--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/umanwizard/fwm"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_bytes = "0.11"
 rust-guile = "0.1"
 rand = "0.8"
 x11 = { version = "2", features = ["xlib"] }
