--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ repository = "https://github.com/umanwizard/fwm"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_bytes = "0.11"
-rust-guile = "0.1"
+rust-guile = { git = "https://gitlab.com/btv/rust-guile", branch = "utils" }
 rand = "0.8"
 x11 = { version = "2", features = ["xlib"] }
