--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,7 @@ serde_json = "1"
 serde_bytes = "0.11"
 rust-guile = { git = "https://gitlab.com/btv/rust-guile", branch = "utils" }
 rand = "0.8"
+timely = "0.12" # for MutableAntichain
+differential-dataflow = "0.12" # for Lattice::meet
 x11 = { version = "2", features = ["xlib"] }
 clap = { version = "3.1.8", features = ["derive"] }
